--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,16 @@
 spring.application.name=springredditclone
 # Database properties #
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/spring-reddit-clone
-spring.datasource.username=root
-spring.datasource.password=Root123#
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# SMTP mail properties #
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.port=25
+spring.mail.username=
+spring.mail.password=
+spring.mail.protocol=smtp
