--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,10 @@ spring.mail.port=25
 spring.mail.username=
 spring.mail.password=
 spring.mail.protocol=smtp
+
+# JWT properties #
+jwt.expiration.time=900000
+jwt.public.key=classpath:app.pub
+jwt.private.key=classpath:app.key
+
+# logging.level.org.springframework=DEBUG
